second layout goes

--- a/pages/playlist.html
+++ b/pages/playlist.html
@@ -132,108 +132,110 @@
         </div>
       </div>
       <div class="layout-main">
-        <div class="page">
-          <div class="sticky">
-            <div class="page-block">
-              <header class="header" aria-label="Barra superior y menú del usuario">
-                <div class="navigation">
-                  <button class="navigation-prev" aria-label="Volver" title="Volver">
-                    <i class="icon-arrowLeft" aria-hidden="true"></i>
-                  </button>
-                  <button class="navigation-next" disabled aria-label="Avanzar" title="Avanzar">
-                    <i class="icon-arrowRight"></i>
-                  </button>
-                </div>
-                <form class="search" role="search" aria-label="Buscar por Artistas, canciones o podcast">
-                  <i class="icon-search" aria-hidden="true"></i>
-                  <input type="search" placeholder="Buscar por Artistas, canciones o podcast">
-                </form>
-              </header>
+        <div class="layout-main-filter">
+          <div class="page">
+            <div class="sticky">
+              <div class="page-block">
+                <header class="header" aria-label="Barra superior y menú del usuario">
+                  <div class="navigation">
+                    <button class="navigation-prev" aria-label="Volver" title="Volver">
+                      <i class="icon-arrowLeft" aria-hidden="true"></i>
+                    </button>
+                    <button class="navigation-next" disabled aria-label="Avanzar" title="Avanzar">
+                      <i class="icon-arrowRight"></i>
+                    </button>
+                  </div>
+                  <form class="search" role="search" aria-label="Buscar por Artistas, canciones o podcast">
+                    <i class="icon-search" aria-hidden="true"></i>
+                    <input type="search" placeholder="Buscar por Artistas, canciones o podcast">
+                  </form>
+                </header>
+              </div>
             </div>
+            <main class="page-block">
+              <div class="playlist">
+                <div class="playlist-detail">
+                  <div class="playlist-title">
+                    <h2>Weathering with you</h2>
+                  </div>
+                  <div class="playlist-details">
+                    <p>Anime Hits</p>
+                    <p>2,611,830 SEGUIDORES</p>
+                  </div>
+                  <div class="playlist-action">
+                    <button class="is-primary">REPRODUCIR</button>
+                  </div>
+                </div>
+                <div class="playlist-list">
+                  <div class="playlist-filter">
+                    <i class="icon-search"></i>
+                    <span>filtrar</span>
+                  </div>
+                  <div class="playlist-top">
+                    <span>Título</span>
+                    <span>Artista</span>
+                    <span>Álbum</span>
+                    <i class="icon-calendar"></i>
+                    <i class="icon-clock"></i>
+                  </div>
+                  <div class="playlist-song">
+                    <button class=""></button>
+                    <i class="icon-heart"></i>
+                    <span>Grand Escape</span>
+                    <span>RADWIMPS</span>
+                    <span>Weathering with you</span>
+                    <span>2021-02-10</span>
+                    <span>3:25</span>
+                  </div>
+                  <div class="playlist-song">
+                    <button class=""></button>
+                    <i class="icon-heart"></i>
+                    <span>Grand Escape</span>
+                    <span>RADWIMPS</span>
+                    <span>Weathering with you</span>
+                    <span>2021-02-10</span>
+                    <span>3:25</span>
+                  </div>
+                  <div class="playlist-song">
+                    <button class=""></button>
+                    <i class="icon-heart"></i>
+                    <span>Grand Escape</span>
+                    <span>RADWIMPS</span>
+                    <span>Weathering with you</span>
+                    <span>2021-02-10</span>
+                    <span>3:25</span>
+                  </div>
+                  <div class="playlist-song">
+                    <button class=""></button>
+                    <i class="icon-heart"></i>
+                    <span>Grand Escape</span>
+                    <span>RADWIMPS</span>
+                    <span>Weathering with you</span>
+                    <span>2021-02-10</span>
+                    <span>3:25</span>
+                  </div>
+                  <div class="playlist-song">
+                    <button class=""></button>
+                    <i class="icon-heart"></i>
+                    <span>Grand Escape</span>
+                    <span>RADWIMPS</span>
+                    <span>Weathering with you</span>
+                    <span>2021-02-10</span>
+                    <span>3:25</span>
+                  </div>
+                  <div class="playlist-song">
+                    <button class=""></button>
+                    <i class="icon-heart"></i>
+                    <span>Grand Escape</span>
+                    <span>RADWIMPS</span>
+                    <span>Weathering with you</span>
+                    <span>2021-02-10</span>
+                    <span>3:25</span>
+                  </div>
+                </div>
+              </div>
+            </main>
           </div>
-          <main class="page-block">
-            <div class="playlist">
-              <div class="playlist-detail">
-                <div class="playlist-title">
-                  <h2>Weathering with you</h2>
-                </div>
-                <div class="playlist-details">
-                  <p>Anime Hits</p>
-                  <p>2,611,830 SEGUIDORES</p>
-                </div>
-                <div class="playlist-action">
-                  <button class="is is-primary">Reproducir</button>
-                </div>
-              </div>
-              <div class="playlist-list">
-                <div class="playlist-filter">
-                  <i class="icon-search"></i>
-                  <span>filtrar</span>
-                </div>
-                <div class="playlist-top">
-                  <span>Título</span>
-                  <span>Artista</span>
-                  <span>Álbum</span>
-                  <i class="icon-calendar"></i>
-                  <i class="icon-clock"></i>
-                </div>
-                <div class="playlist-song">
-                  <button class=""></button>
-                  <i class="icon-heart"></i>
-                  <span>Grand Escape</span>
-                  <span>RADWIMPS</span>
-                  <span>Weathering with you</span>
-                  <span>2021-02-10</span>
-                  <span>3:25</span>
-                </div>
-                <div class="playlist-song">
-                  <button class=""></button>
-                  <i class="icon-heart"></i>
-                  <span>Grand Escape</span>
-                  <span>RADWIMPS</span>
-                  <span>Weathering with you</span>
-                  <span>2021-02-10</span>
-                  <span>3:25</span>
-                </div>
-                <div class="playlist-song">
-                  <button class=""></button>
-                  <i class="icon-heart"></i>
-                  <span>Grand Escape</span>
-                  <span>RADWIMPS</span>
-                  <span>Weathering with you</span>
-                  <span>2021-02-10</span>
-                  <span>3:25</span>
-                </div>
-                <div class="playlist-song">
-                  <button class=""></button>
-                  <i class="icon-heart"></i>
-                  <span>Grand Escape</span>
-                  <span>RADWIMPS</span>
-                  <span>Weathering with you</span>
-                  <span>2021-02-10</span>
-                  <span>3:25</span>
-                </div>
-                <div class="playlist-song">
-                  <button class=""></button>
-                  <i class="icon-heart"></i>
-                  <span>Grand Escape</span>
-                  <span>RADWIMPS</span>
-                  <span>Weathering with you</span>
-                  <span>2021-02-10</span>
-                  <span>3:25</span>
-                </div>
-                <div class="playlist-song">
-                  <button class=""></button>
-                  <i class="icon-heart"></i>
-                  <span>Grand Escape</span>
-                  <span>RADWIMPS</span>
-                  <span>Weathering with you</span>
-                  <span>2021-02-10</span>
-                  <span>3:25</span>
-                </div>
-              </div>
-            </div>
-          </main>
         </div>
       </div>
       </div>
