second layout goes x2

--- a/pages/playlist.html
+++ b/pages/playlist.html
@@ -175,62 +175,66 @@
                     <span>Título</span>
                     <span>Artista</span>
                     <span>Álbum</span>
-                    <i class="icon-calendar"></i>
-                    <i class="icon-clock"></i>
+                    <div class="playlist-top-icons">
+                      <i class="icon-calendar"></i>
+                      <i class="icon-clock"></i>
+                    </div>
                   </div>
-                  <div class="playlist-song">
-                    <button class=""></button>
-                    <i class="icon-heart"></i>
-                    <span>Grand Escape</span>
-                    <span>RADWIMPS</span>
-                    <span>Weathering with you</span>
-                    <span>2021-02-10</span>
-                    <span>3:25</span>
-                  </div>
-                  <div class="playlist-song">
-                    <button class=""></button>
-                    <i class="icon-heart"></i>
-                    <span>Grand Escape</span>
-                    <span>RADWIMPS</span>
-                    <span>Weathering with you</span>
-                    <span>2021-02-10</span>
-                    <span>3:25</span>
-                  </div>
-                  <div class="playlist-song">
-                    <button class=""></button>
-                    <i class="icon-heart"></i>
-                    <span>Grand Escape</span>
-                    <span>RADWIMPS</span>
-                    <span>Weathering with you</span>
-                    <span>2021-02-10</span>
-                    <span>3:25</span>
-                  </div>
-                  <div class="playlist-song">
-                    <button class=""></button>
-                    <i class="icon-heart"></i>
-                    <span>Grand Escape</span>
-                    <span>RADWIMPS</span>
-                    <span>Weathering with you</span>
-                    <span>2021-02-10</span>
-                    <span>3:25</span>
-                  </div>
-                  <div class="playlist-song">
-                    <button class=""></button>
-                    <i class="icon-heart"></i>
-                    <span>Grand Escape</span>
-                    <span>RADWIMPS</span>
-                    <span>Weathering with you</span>
-                    <span>2021-02-10</span>
-                    <span>3:25</span>
-                  </div>
-                  <div class="playlist-song">
-                    <button class=""></button>
-                    <i class="icon-heart"></i>
-                    <span>Grand Escape</span>
-                    <span>RADWIMPS</span>
-                    <span>Weathering with you</span>
-                    <span>2021-02-10</span>
-                    <span>3:25</span>
+                  <div class="playlist-bottom">
+                    <div class="playlist-song">
+                      <button class=""></button>
+                      <i class="icon-heart"></i>
+                      <span>Grand Escape</span>
+                      <span>RADWIMPS</span>
+                      <span>Weathering with you</span>
+                      <span>2021-02-10</span>
+                      <span>3:25</span>
+                    </div>
+                    <div class="playlist-song">
+                      <button class=""></button>
+                      <i class="icon-heart"></i>
+                      <span>Grand Escape</span>
+                      <span>RADWIMPS</span>
+                      <span>Weathering with you</span>
+                      <span>2021-02-10</span>
+                      <span>3:25</span>
+                    </div>
+                    <div class="playlist-song">
+                      <button class=""></button>
+                      <i class="icon-heart"></i>
+                      <span>Grand Escape</span>
+                      <span>RADWIMPS</span>
+                      <span>Weathering with you</span>
+                      <span>2021-02-10</span>
+                      <span>3:25</span>
+                    </div>
+                    <div class="playlist-song">
+                      <button class=""></button>
+                      <i class="icon-heart"></i>
+                      <span>Grand Escape</span>
+                      <span>RADWIMPS</span>
+                      <span>Weathering with you</span>
+                      <span>2021-02-10</span>
+                      <span>3:25</span>
+                    </div>
+                    <div class="playlist-song">
+                      <button class=""></button>
+                      <i class="icon-heart"></i>
+                      <span>Grand Escape</span>
+                      <span>RADWIMPS</span>
+                      <span>Weathering with you</span>
+                      <span>2021-02-10</span>
+                      <span>3:25</span>
+                    </div>
+                    <div class="playlist-song">
+                      <button class=""></button>
+                      <i class="icon-heart"></i>
+                      <span>Grand Escape</span>
+                      <span>RADWIMPS</span>
+                      <span>Weathering with you</span>
+                      <span>2021-02-10</span>
+                      <span>3:25</span>
+                    </div>
                   </div>
                 </div>
               </div>
